fixing logotype margin on mobile

--- a/app/assets/stylesheets/components/_c-nav.scss
+++ b/app/assets/stylesheets/components/_c-nav.scss
@@ -148,6 +148,10 @@ $navheight: 65px;
       color: #fff;
     }
 
+    .c-nav__logo-wrapper {
+      margin-left: -20px;
+    }
+
     .c-nav__logo {
       display: inline-block;
       fill: #fff;
